# Fastapi-Auth-API-Gateway

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py
nginx/: default.conf
src/: routes.py
src/api_gateway/adapters/producers/: kafka_producer.py
src/api_gateway/controllers/: microservice_photos_controller.py  microservice_profiles_controller.py  microservice_swipes_controller.py
src/api_gateway/dependencies/: api_gateway_dependency.py
src/api_gateway/exceptions/: api_gateway_exceptions.py
src/api_gateway/schemas/: microservice_profiles_schema.py
src/api_gateway/services/facades/: external_facade_service.py  photo_service_facade.py  profile_service_facade.py  swipe_facade_service.py
src/config/: project_config.py
src/config/database/: accessor.py
src/models/: user_model.py
src/users/auth_clients/: __init__.py  google_client.py  yandex_client.py
src/users/controllers/: auth_controller.py  user_controller.py
src/users/dependencies/: user_dependency.py
src/users/exceptions/: user_exceptions.py
src/users/repositories/: user_repository.py
src/users/schemas/: user_schema.py
src/users/services/: auth_service.py  user_service.py
